tests/NormalTests/paczka1/small_fuzzy/88867328.err
Error in line 2: fVJeYvZnr7W A465 90,1
Error in line 5: fVJeYvZnr7W S533 62,6
Error in line 4: 78pKnQ6hWN S648 60,7
Error in line 1: E4Qo S648 30,0
Error in line 16: fVJeYvZnr7W S533 -1,1
